tests/errors/test_32.xpp
// Array initialised with 0 elements

fn main() void {
	let x: i64[10] = [];
	let y = [];
}
